fixed concave pies layout issue in WP8.1

--- a/app-dev/styles/base/layout.css
+++ b/app-dev/styles/base/layout.css
@@ -3285,7 +3285,7 @@ dl.tickets-list {
 		}
 		.dialog.dialog-style-card > .deco .concave-pies.pies-layout-hori::after,
 		.dialog.dialog-style-card > .deco .concave-pies.pies-layout-hori::before {
-			font-size: 2.1rem;
+			font-size: 2.2rem;
 		}
 
 
